--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "test": "./vendor/bin/phpunit tests"
     },
     "require": {
-        "twbs/bootstrap": "5.3.3"
+        "twbs/bootstrap": "5.3.3",
+        "erusev/parsedown": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
