--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "kreerc/a11ybuddy",
     "description": "A platform for documenting and discussing digital accessibility for developers and users alike",
     "type": "project",
-    "license": "Apache 2.0 License",
+    "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
             "A11yBuddy\\": "src/A11yBuddy/"
@@ -22,7 +22,7 @@
         "test": "./vendor/bin/phpunit tests"
     },
     "require": {
-        "twbs/bootstrap": "5.3.3",
+        "twbs/bootstrap": "5.3.*",
         "erusev/parsedown": "^1.7"
     },
     "require-dev": {
