--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
-            "A11yBuddy\\": "src/A11yBuddy/"
+            "A11yBuddy\\": "src/"
         }
     },
     "scripts": {
