--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,5 +36,8 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
-      - name: Run test suite
+      - name: Run PHPUnit test suite
         run: ./vendor/bin/phpunit --bootstrap vendor/autoload.php tests
+
+      - name: Run PHPStan
+        run: ./vendor/bin/phpstan analyse src --level=3
