--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,16 @@
             "mkdir -p template/dependencies/",
             "cp -r vendor/twbs/bootstrap/dist/ template/dependencies/bootstrap/"
         ],
-        "test": "./vendor/bin/phpunit tests"
+        "test": "./vendor/bin/phpunit tests",
+        "stan": "./vendor/bin/phpstan analyse src --level=8",
+        "stan-easy": "./vendor/bin/phpstan analyse src --level=3"
     },
     "require": {
         "twbs/bootstrap": "5.3.*",
         "erusev/parsedown": "^1.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.0"
+        "phpunit/phpunit": "^11.0",
+        "phpstan/phpstan": "^1.10"
     }
 }
