--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     },
     "scripts": {
         "post-update-cmd": [
-            "rm -rf template/dependencies/",
-            "mkdir -p template/dependencies/",
-            "cp -r vendor/twbs/bootstrap/dist/ template/dependencies/bootstrap/"
+            "rm -rf assets/",
+            "mkdir -p assets/",
+            "cp -r vendor/twbs/bootstrap/dist/ assets/bootstrap/"
         ],
         "post-install-cmd": [
-            "rm -rf template/dependencies/",
-            "mkdir -p template/dependencies/",
-            "cp -r vendor/twbs/bootstrap/dist/ template/dependencies/bootstrap/"
+            "rm -rf assets/",
+            "mkdir -p assets/",
+            "cp -r vendor/twbs/bootstrap/dist/ assets/bootstrap/"
         ],
         "test": "./vendor/bin/phpunit tests",
         "stan": "./vendor/bin/phpstan analyse src tests --level=8",
