--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
             "cp -r vendor/twbs/bootstrap/dist/ assets/bootstrap/"
         ],
         "test": "./vendor/bin/phpunit tests",
-        "stan": "./vendor/bin/phpstan analyse src tests --level=8",
-        "stan-easy": "./vendor/bin/phpstan analyse src tests --level=5",
+        "stan": "./vendor/bin/phpstan analyse src tests --level=8 --memory-limit=256M",
+        "stan-easy": "./vendor/bin/phpstan analyse src tests --level=5 --memory-limit=256M",
         "test-all": [
             "composer run-script test",
             "composer run-script stan-easy"
@@ -29,7 +29,8 @@
     },
     "require": {
         "twbs/bootstrap": "5.3.*",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "nesbot/carbon": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
